若干问题修正
1.修正文件编码格式为UTF-8 with bom，以便windows环境编译不报错
2.修正CMakeLists.txt，适配windows平台编译
3.若干其他问题修正

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,29 @@
 cmake_minimum_required(VERSION 3.12)
 project(123)
 
+ADD_DEFINITIONS(-DBoost_LIB_DIAGNOSTIC_DEFINITIONS)
+#ADD_DEFINITIONS(-DWINDOWS_PLATFORM)
 set(CMAKE_CXX_STANDARD 14)
 
 find_package(Boost 1.66.0 COMPONENTS system context thread REQUIRED)
 
+include_directories(${Boost_INCLUDE_DIRS})
+#windows平台链接库的时候，boost代码当中会有相关判定，所以直接link_directories，避免相关问题
+if(WIN32 AND Boost_FOUND)
+    message("123123123")
+    add_compile_definitions(WINDOWS_PLATFORM)
+    link_directories(${Boost_LIBRARY_DIRS})
+endif()
 aux_source_directory(. DIR_SRCS)
 add_subdirectory(algorithm)
 add_subdirectory(data_fetch)
 add_subdirectory(stock_base_info)
 #add_executable(123 main.cpp data_fetch/DataFetch.cpp data_fetch/DataFetch.h algorithm/Calculaotr.cpp algorithm/Calculaotr.h stock_base_info/stock_info.cpp stock_base_info/stock_info.h data_fetch/HttpHeader.cpp data_fetch/HttpHeader.h)
 #add_executable(123 ${DIR_SRCS} output/FileResultOutput.cpp output/FileResultOutput.h)
-add_executable(123 ${DIR_SRCS} output/FileResultOutput.cpp output/FileResultOutput.h)
+add_library(123 SHARED ${DIR_SRCS} algorithm/Calculator.cpp main.cpp)
 
 TARGET_LINK_LIBRARIES(123 data_fetch)
 TARGET_LINK_LIBRARIES(123 algorithm)
-TARGET_LINK_LIBRARIES(123 ${Boost_LIBRARIES})
+if(NOT WIN32)
+    TARGET_LINK_LIBRARIES(123 ${Boost_LIBRARIES})
+endif()
