--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,18 +6,23 @@ add_compile_definitions(EXECUTION)
 #ADD_DEFINITIONS(-DWINDOWS_PLATFORM)
 set(CMAKE_CXX_STANDARD 14)
 
-find_package(Boost 1.66.0 COMPONENTS system context thread REQUIRED)
+find_package(Boost 1.70 REQUIRED COMPONENTS system context)
 
+message("find_package $ENV{Path}")
+message(${Boost_FOUND})
 include_directories(${Boost_INCLUDE_DIRS})
 #windows平台链接库的时候，boost代码当中会有相关判定，所以直接link_directories，避免相关问题
 if(WIN32 AND Boost_FOUND)
+	message("123123213")
     add_compile_definitions(WINDOWS_PLATFORM)
     link_directories(${Boost_LIBRARY_DIRS})
 endif()
+message("not in ???")
 aux_source_directory(. DIR_SRCS)
 add_subdirectory(algorithm)
 add_subdirectory(data_fetch)
 add_subdirectory(stock_base_info)
+add_subdirectory(ui)
 #add_executable(123 main.cpp data_fetch/DataFetc h.cpp data_fetch/DataFetch.h algorithm/Calculaotr.cpp algorithm/Calculaotr.h stock_base_info/stock_info.cpp stock_base_info/stock_info.h data_fetch/HttpHeader.cpp data_fetch/HttpHeader.h)
 #add_executable(123 ${DIR_SRCS} output/FileResultOutput.cpp output/FileResultOutput.h)
 if(NOT EXECUTION)
@@ -28,6 +33,7 @@ endif()
 
 TARGET_LINK_LIBRARIES(123 data_fetch)
 TARGET_LINK_LIBRARIES(123 algorithm)
+TARGET_LINK_LIBRARIES(123 ui)
 if(NOT WIN32)
     TARGET_LINK_LIBRARIES(123 ${Boost_LIBRARIES})
 endif()
