--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -3,4 +3,4 @@ project(123)
 
 set(CMAKE_CXX_STANDARD 14)
 aux_source_directory(. DIR_LIB_SRCS)
-add_library(ui ${DIR_LIB_SRCS} ui_main.h ui_main.cpp)
+add_library(ui ${DIR_LIB_SRCS} ui_main.h ui_main.cpp stock_app.h stock_app_window.h)
